--- a/chat.html
+++ b/chat.html
@@ -1,10 +1,10 @@
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #005290;
+		background-color: #004b87;
 		font-family: "Arial", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #005290;
+		outline: 1px solid #004b87;
 	}
 </style>
 
@@ -14,10 +14,8 @@
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
-		embedded_svc.settings.defaultMinimizedText = 'Chat with an Agent'; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-		
-		embedded_svc.settings.autoOpenPostChat = false;
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
 		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
@@ -30,35 +28,6 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-		
-		embedded_svc.settings.extraPrechatInfo = [{
-		  "entityFieldMaps": [{
-			"doCreate":false,
-			"doFind":true,
-			"fieldName":"LastName",
-			"isExactMatch":true,
-			"label":"Last Name"
-		  }, {
-			"doCreate":false,
-			"doFind":true,
-			"fieldName":"FirstName",
-			"isExactMatch":true,
-			"label":"First Name"
-		  }, {
-			"doCreate":false,
-			"doFind":true,
-			"fieldName":"Email",
-			"isExactMatch":true,
-			"label":"Email"
-		  }],
-		  "entityName":"Contact",
-		  "saveToTranscript": "ContactId"
-		}];
-
-		embedded_svc.settings.extraPrechatFormDetails = [{  
-    "label":"Email",   
-    "transcriptFields":[ "Visitor_Email__c" ]
-}];
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
